03_demo_ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  # To not to us the GCE's native solution.
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
spec:
  # A default backend for all requests not match the path.
  #backend:
  #  serviceName: you-can-use-google-404 # https://github.com/kubernetes/contrib/blob/master/ingress/controllers/nginx/examples/default-backend.yaml
  #  servicePort: 80
  rules:
  - host: # specify your dmain name here. e.g. www.example.com. Empty = wildcard 
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-node
          servicePort: 80
